styling to fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ box-shadow: 0 0px 5px rgba(0,0,0,0.5)}
 z-index: 5;background-image: url('../image/panel_g_shadow.png')}
 #group_wrapper{width: 270px;overflow-y: auto;cursor: auto;z-index: 19}
 #tg_selector{position: absolute;z-index: 20;left: 222px}
-#panel_task{position: absolute;top: 1px;height: 100%;overflow-y:auto;overflow-x: hidden;z-index: 15;margin-left: 270px;
+#panel_task{position: absolute;top: 1px;height: 100%;overflow-y:auto ! important;overflow-x: hidden;z-index: 15;margin-left: 270px;
 background-color: #f8f8f8}
 .tg_title{margin: 0;text-align: center;height: 50px;font-size: 0.9em;border-bottom: 1px solid #dbe0e2;
 -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.5);-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.5);
@@ -82,7 +82,9 @@ cursor: pointer;background: url('../image/button_add.png') no-repeat center cent
 #tasks_sortable{
     list-style-type: none;
     margin: 0;padding: 0;
-    padding-bottom: 50px
+    padding-bottom: 50px;
+    overflow-y: auto;
+    height: 100%
 }
 .delete_task,.delete_group{
     width: 50px;
